build(project): update release setting