@@ -8,6 +8,18 @@ val releaseUrl: String by project
 plugins {
   alias(libs.plugins.pages)
   alias(libs.plugins.git.publish)
+  alias(libs.plugins.asciidoctorPdf)
+  alias(libs.plugins.asciidoctorJvm)
+  alias(libs.plugins.asciidoctorEpub)
+  alias(libs.plugins.asciidoctorEditconfig)
+  alias(libs.plugins.asciidoctorGem)
+  idea
+}
+
+repositories {
+  ruby {
+    gems()
+  }
 }
 
 pages {
@@ -40,5 +52,34 @@ tasks {
 //    }
   deployPages {
     dependsOn(":dokkaHtmlMultiModule")
+  }
+}
+
+asciidoctorj {
+  modules {
+    diagram.use()
+  }
+}
+
+tasks.asciidoctor {
+  parallelMode = true
+  languages("en", "zh")
+  jvm {
+    jvmArgs(
+      "--add-opens",
+      "java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens",
+      "java.base/java.io=ALL-UNNAMED",
+    )
+  }
+}
+
+tasks.build {
+  dependsOn(tasks.asciidoctor)
+}
+
+idea {
+  module {
+    sourceDirs = project.tasks.asciidoctor.get().sourceFileTree.toMutableSet()
   }
 }
